# BackPropagation

./: LICENSE  README.md
src/: backpropagation.cpp  backpropagation.hpp  random_generator.hpp  types.hpp
src/functions/: functions.hpp  functor.hpp  relu.hpp  sigmoid.hpp  tanh.hpp
src/optimizers/: gd.hpp  optimizer.hpp  optimizers.hpp
test/: CMakeLists.txt  main.cpp
