CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(BackPropagation C CXX)

FIND_PACKAGE(Threads REQUIRED)

if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
  MESSAGE("-- Detected Clang")
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y -DGTEST_HAS_TR1_TUPLE=0")
elseif("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
  MESSAGE("-- Detected GCC")
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
endif()

SET(CMAKE_CXX_FLAGS_RELEASE "-Wall -O4")
SET(CMAKE_CXX_FLAGS_DEBUG "-g")
SET(CMAKE_BUILD_TYPE Release)

INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR} ../src")
ADD_EXECUTABLE(backprop main.cpp ../src/backpropagation.cpp)
TARGET_LINK_LIBRARIES(backprop ${CMAKE_THREAD_LIBS_INIT})
